--- a/ambit verd/compilerconfig.json
+++ b/ambit verd/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "Content/css/index.css",
     "inputFile": "Content/css/index.scss"
+  },
+  {
+    "outputFile": "Content/css/Services.css",
+    "inputFile": "Content/css/Services.scss"
   }
 ]
