--- a/ambit verd/Ambit Verd.csproj
+++ b/ambit verd/Ambit Verd.csproj
@@ -161,9 +161,14 @@
     <Content Include="Content\css\index.min.css">
       <DependentUpon>index.css</DependentUpon>
     </Content>
+    <Content Include="Content\img\flag-cat.png" />
     <Content Include="Content\img\flag-fr.png" />
     <Content Include="Content\img\flag-sp.png" />
     <Content Include="Content\img\home.jpg" />
+    <Content Include="Content\img\index-1.jpg" />
+    <Content Include="Content\img\index-2.PNG" />
+    <Content Include="Content\img\index-3.PNG" />
+    <Content Include="Content\img\index-4.jpg" />
     <Content Include="Content\img\logo-border.png" />
     <Content Include="Content\img\logo-no-border.jpg" />
     <Content Include="Content\img\logo.png" />
@@ -187,6 +192,8 @@
     <Content Include="Views\Shared\Partials\_navbar.cshtml" />
     <Content Include="Views\Shared\Partials\_footer.cshtml" />
     <Content Include="Views\Home\Services.cshtml" />
+    <Content Include="Views\Home\Projects.cshtml" />
+    <Content Include="Views\Home\WhoWeAre.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
