--- a/ambit verd/compilerconfig.json
+++ b/ambit verd/compilerconfig.json
@@ -6,5 +6,17 @@
   {
     "outputFile": "Content/css/Services.css",
     "inputFile": "Content/css/Services.scss"
+  },
+  {
+    "outputFile": "Content/css/Contact.css",
+    "inputFile": "Content/css/Contact.scss"
+  },
+  {
+    "outputFile": "Content/css/WhoWeAre.css",
+    "inputFile": "Content/css/WhoWeAre.scss"
+  },
+  {
+    "outputFile": "Content/css/Projects.css",
+    "inputFile": "Content/css/Projects.scss"
   }
 ]
