MAIN: Send Email

--- a/ambit verd/Ambit Verd.csproj
+++ b/ambit verd/Ambit Verd.csproj
@@ -224,6 +224,7 @@
     <Content Include="Views\Home\Services.cshtml" />
     <Content Include="Views\Home\Projects.cshtml" />
     <Content Include="Views\Home\WhoWeAre.cshtml" />
+    <Content Include="Views\Shared\Partials\_modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
