--- a/ambit verd/Web.config
+++ b/ambit verd/Web.config
@@ -6,15 +6,9 @@
 <configuration>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Enabled" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
-    <add key="host" value="smtp.gmail.com" />
-    <add key="port" value="587" />
-    <add key="user" value="alejimreg@gmail.com" />
-    <add key="password" value="alejandro199855" />
-    <add key="enableSsl" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
